<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">


    <LinearLayout
        android:id="@+id/liniarmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txtrememberpass"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-1dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/bg_shadow_layout"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tvlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/MainRedColor"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>


        <TextView
            android:id="@+id/loginenterance"
            android:layout_width="243dp"
            android:layout_height="51dp"

            android:layout_marginTop="150dp"
            android:paddingStart="30dp"
            android:text="@string/cominicate_with_a_hundred_of_students"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_perm_identity_24"
                app:startIconTint="@color/inputtextcolor">
                <EditText
                    android:id="@+id/etID"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/ID"
                    android:inputType="number"
                    android:textColor="@color/inputtextcolor"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/inputtextcolor"
                app:startIconTint="@color/inputtextcolor">
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/inputtextcolor"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
<CheckBox
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/cb_rememberme"
    android:text="Remember me"
    android:checked="false"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtrememberpass"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/bg_botton"
        android:text="@string/Login"
        app:backgroundTint="@color/MainRedColor"

        />

    <TextView
        android:id="@+id/txtrememberpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="51dp"
        android:text="@string/can_t_login_reset_password"
        android:textColor="@color/MainRedColor" />


</RelativeLayout>